--- a/package.json
+++ b/package.json
@@ -38,10 +38,15 @@
     "@types/react-dom": "^18",
     "@types/react-lottie": "^1.2.10",
     "autoprefixer": "^10.4.20",
-    "eslint": "^9",
-    "eslint-config-next": "14.2.14",
+    "eslint": "^8.57.1",
+    "eslint-config-next": "^14.2.14",
     "postcss": "^8",
     "tailwindcss": "^3.4.13",
     "typescript": "^5"
-  }
+  },
+  "engines": {
+    "node": ">=20.18.0",
+    "npm": ">=10.9.0"
+  },
+  "engineStrict": false
 }
